--- a/include/articles/critica_1.html
+++ b/include/articles/critica_1.html
@@ -53,8 +53,9 @@
 						<div class="person">&mdash; Caproni e Jiro</div>
 						<div class="media">
 							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+								<source src="../media/audio/sognomaledetto.mp3" type="audio/mpeg">
+								<source src="../media/audio/sognomaledetto.wav" type="audio/wav">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/sognomaledetto.wav">qui</a>.
 							</audio>
 						</div>
 						<div class="media">
