--- a/include/articles/critica_2.html
+++ b/include/articles/critica_2.html
@@ -58,27 +58,26 @@
 							</div>
 						</div>
 						<div class="media">
-							<video controls preload="metadata">
-								<source src="../media/video/trailer.mp4" type="video/mp4">
-								<source src="../media/video/trailer.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
-							</video>
+							<iframe width="450" height="253" src="https://www.youtube.com/embed/ZI9PF64JTAc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
+							</iframe>
 							<p class="didascalia">Il video ufficiale di "Hikōki-gumo", che mostra alcune scene del film e dello Studio.</p>
 						</div>
 						<p>Non posso inoltre sorvolare sui suoni prodotti dagli aerei, realizzati con voci umane, come già accennato per quanto riguarda gli effetti sonori legati al terremoto del Kanto. La voce dei motori, il librarsi nel cielo, il rumore dei meccanismi di accensione sono tutti elementi che soffiano vita nei velivoli, quasi a dargli una coscienza propria. L'ennesima emozione da brividi che ci regala il maestro.</p>
 						<div class="media">
 							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+								<source src="../media/audio/aerogabbiano.mp3" type="audio/mpeg">
+								<source src="../media/audio/aerogabbiano.wav" type="audio/wav">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/aerogabbiano.wav">qui</a>.
 							</audio>
-							<p class="didascalia">Aereogabbiano</p>
+							<p class="didascalia">L'aereo-gabbiano del piccolo Jiro</p>
 						</div>
 						<div class="media">
 							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+								<source src="../media/audio/noviplano.mp3" type="audio/mpeg">
+								<source src="../media/audio/noviplano.wav" type="audio/wav">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/noviplano.wav">qui</a>.
 							</audio>
-							<p class="didascalia">Motori aerei</p>
+							<p class="didascalia">I motori del noviplano Caproni</p>
 						</div>
 						<p class="curiosita"><b>Curiosità:</b> L'intero comparto audio è stato mixato in mono, e non in stereo o addirittura multicanale; una scelta particolare, che ha destato numerose perplessità da parte dei più "tecnici". Dopo qualche attimo di riflessione sono giunto alla conclusione che il maestro forse voleva contestualizzare persino la traccia audio della sua pellicola, quasi a voler ricordare che una vicenda narrata negli anni '30 richiede tecniche di registrazione audio "old school".</p>
 						<p>Prima di concludere questo capitolo dedicato alla critica vorrei ringraziare tutto lo staff dello Studio che, sotto la direzione attenta del maestro, lavora duramente per regalarci delle tavole meravigliose dai colori vividi ed evocativi, una gioia per il cuore (l'azzurro del cielo e il verde dei prati sconfinati trasmettono un particolare senso di infinito). Parlo, ad esempio, dei dettagli del regolo calcolatore che diventa un vero e proprio tratto distintivo di Jiro, nonché della cura riposta nel riportare su schermo tutti i calcoli matematici e i disegni tecnici tipici del mestiere di progettista.</p>
