--- a/include/articles/personaggi.html
+++ b/include/articles/personaggi.html
@@ -5,37 +5,37 @@
 					<article>
 						<h2>Jiro Horikoshi</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_jiro.png" target="_blank"><img src="../media/img/personaggi_jiro.jpg" alt=""></a>
 						</div>
 						<p>Protagonista della pellicola, è un talentuoso ingegnere aeronautico con una forte passione per il suo mestiere. Intelligente, visionario e gentiluomo, lo vediamo crescere lungo tutto il film, che lo ritrae sia nei suoi momenti più felici che in quelli più tristi. Ci mostrerà come non farsi portare via il cappello dal vento...</p>
 						<div class="person"></div>
 						<h2>Nahoko Satomi</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_nahoko.png" target="_blank"><img src="../media/img/personaggi_nahoko.jpg" alt=""></a>
 						</div>
 						<p>La bellissima e dolcissima moglie di Jiro. Una ragazza forte e dal cuore gentile, che ci conquista con i suoi modi delicati e femminili. Riempirà le giornate del nostro progettista di felicità e sorrisi, grazie ad alcuni semplici piccoli gesti quotidiani. Una compagna piacevole come la brezza primaverile, che porta con sé i profumi dei fiori che sbocciano.</p>
 						<div class="person"></div>
 						<h2>Gianni Caproni</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_caproni.png" target="_blank"><img src="../media/img/personaggi_caproni.jpg" alt=""></a>
 						</div>
 						<p>Il personaggio con il ruolo più misterioso di tutto il film, ma anche il più carismatico. Il famoso progettista italiano incita continuamente il nostro protagonista a sfidare il vento, e lo ispira nella realizzazione dei suoi sogni con le ali.</p>
 						<div class="person"></div>
 						<h2>Kiro Honjo</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_honjo.png" target="_blank"><img src="../media/img/personaggi_honjo.jpg" alt=""></a>
 						</div>
 						<p>Grande amico e collega di Jiro. I suoi modi di fare sono molto diretti e spontanei, e riescono più volte a fare breccia nelle motivazioni lavorative del nostro protagonista. Honjo è un amico su cui si può sempre contare.</p>
 						<div class="person"></div>
 						<h2>I coniugi Kurokawa</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_kurokawas.png" target="_blank"><img src="../media/img/personaggi_kurokawas.jpg" alt=""></a>
 						</div>
 						<p>La coppia formata dal severo ma sincero direttore Kurokawa e dalla sua consorte, gentile e premurosa. Accolgono in casa propria i due innamorati protagonisti e acconsentono ad essere i loro testimoni di nozze. Sono due tifosi affezionati del rapporto tra Jiro e Nahoko.</p>
 						<div class="person"></div>
 						<h2>Il vento</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/personaggi_vento.png" target="_blank"><img src="../media/img/personaggi_vento.jpg" alt=""></a>
 						</div>
 						<p>Non posso non ergere il vento a protagonista della pellicola. Muove la narrazione ed è infuso di una magica poesia. Fa incontrare Jiro e Nahoko e si fa portatore di grandi emozioni, facendo danzare aeroplani di carta e muovendo dolcemente ogni singolo filo d'erba. È presente persino nel titolo, per cui diamo a Cesare quel che è di Cesare.</p>
 						<div class="person"></div>
