--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -19,10 +19,10 @@
 						<div class="person"></div>
 						<div class="media">
 							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+								<source src="../media/audio/dichiaro.mp3" type="audio/mpeg">
+								<source src="../media/audio/dichiaro.wav" type="audio/wav">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/dichiaro.wav">qui</a>.
 							</audio>
-							<p class="didascalia">culokawa</p>
 						</div>
 						<p>L'altra citazione invece è dello stesso Jiro, che confessa alla sorella Kayo, nel frattempo diventata medico, di aver compreso pienamente la gravità della situazione di Nahoko:</p>
 						<div class="quote">
@@ -33,9 +33,9 @@
 						<p>Vorrei inoltre sottolineare un ultimo dettaglio, questa volta legato al comparto degli effetti sonori. La scena in cui Jiro stringe la mano di Nahoko mentre è costretto a lavorare tutta la notte è a mio parere un capolavoro. Lui vorrebbe fumare una sigaretta, ma lei non vuole staccarsi dalla sua mano: entrambi però ritengono che valga la pena godersi il momento e rimanere vicini (anche se il fumo di una sigaretta non fa certo bene ai polmoni), poiché il tempo a disposizione della ragazza è ormai agli sgoccioli. E mentre ci godiamo uno splendido silenzio che dice più di mille parole, veniamo bruscamente presi alla sprovvista dal forte rumore di una pistola pneumatica, che ci riporta nell'hangar dove Jiro sta seguendo l'assemblaggio del suo aereo. Ancora una volta Miyazaki ci sorprende con una scelta stilistica di grande impatto: sceglie volutamente di inserire un rumore brusco e ad alto volume per accompagnare un cambio di scena che ci ricorda che i momenti magici tra Jiro e Nahoko sono come un sogni, bruscamente interrotti dalla realtà a cui devono far fronte.</p>
 						<div class="media">
 							<video controls preload="metadata">
-								<source src="../media/video/trailer.mp4" type="video/mp4">
-								<source src="../media/video/trailer.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
+								<source src="../media/video/sigaretta.mp4" type="video/mp4">
+								<source src="../media/video/sigaretta.webm" type="video/webm">
+								Il file video non funziona? Scaricalo <a href="../media/audio/sigaretta.mp4">qui</a>.
 							</video>
 						</div>
 						<p>Il finale è invece un grandissimo pugno nello stomaco, sfido chiunque a non versare nemmeno una lacrima. La giovane decide di tornare di nascosto al sanatorio montano, poiché ha compreso che il tempo a sua disposizione è terminato. La coltellata emotiva questa volta ce la infligge la signora Kurokawa, che dice:</p>
@@ -43,13 +43,6 @@
 							"Voleva farsi vedere dal suo amato soltanto nel suo splendore..."
 						</div>
 						<div class="person"></div>
-						<div class="media">
-							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
-							</audio>
-							<p class="didascalia">signora culokawa</p>
-						</div>
 						<p>È quello stesso vento che li ha fatti incontrare infine a portare la brutta notizia a Jiro, il quale sta assistendo al volo di prova del suo primo prototipo di "Zero". Una folata leggera come la sua dolce metà gli annuncia idealmente che Nahoko non c'è più, una notizia che ammutolisce persino il comparto sonoro del film, il quale ci fa sentire soltanto il fruscio del vento.</p>
 						<p>Ritroviamo poi nell'ultima scena Jiro in compagnia del Conte Caproni, nel mondo dei loro sogni, tristemente decorato dalle carcasse dei suoi stessi aerei. Il nostro protagonista è visibilmente affranto, ma quando rivede Nahoko che lo esorta ad andare avanti trova la forza di sorridere, sostenuto per l'ultima volta dalla sua amata moglie.</p>
 						<div class="media">
