--- a/include/articles/tema_storico_1.html
+++ b/include/articles/tema_storico_1.html
@@ -20,17 +20,17 @@
 						<p>Il grande maestro sceglie di rappresentare il sisma poco dopo aver inserito la battuta principale del film: "Si alza il vento, bisogna tentare di vivere...", che anticipa la distruzione causata dalla calamità, la quale irrompe violentemente su schermo anche in termini sonori: passiamo infatti dal silenzio e dalla tranquillità delle verdi campagne giapponesi, alla possente "voce" della terra che trema; i numerosi effetti sonori che seguono (anch'essi realizzati con voci umane), accompagnano i movimenti ondulati del terreno, contribuendo attivamente ad aumentare il livello di tensione generale.</p>
 						<div class="media">
 							<audio controls preload="metadata">
-								<source src="../media/audio/test.mp3" type="audio/mpeg">
-								Il file audio non funziona? Scaricalo <a href="../media/audio/test.mp3">qui</a>.
+								<source src="../media/audio/terremoto.mp3" type="audio/mpeg">
+								<source src="../media/audio/terremoto.wav" type="audio/wav">
+								Il file audio non funziona? Scaricalo <a href="../media/audio/terremoto.wav">qui</a>.
 							</audio>
-							<p class="didascalia">terrachetrema</p>
 						</div>
 						<p>In seguito ci vengono mostrati gli effetti concreti del terremoto: case distrutte, frane, danni alla rete elettrica.</p>
 						<div class="media">
 							<video controls preload="metadata">
-								<source src="../media/video/trailer.mp4" type="video/mp4">
-								<source src="../media/video/trailer.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
+								<source src="../media/video/terremoto.mp4" type="video/mp4">
+								<source src="../media/video/terremoto.webm" type="video/webm">
+								Il file video non funziona? Scaricalo <a href="../media/audio/terremoto.mp4">qui</a>.
 							</video>
 						</div>
 						<p class="curiosita"><b>Una triste curiosità:</b> L'intera sequenza del terremoto era già stata completata quando l'11 marzo 2011 un devastante sisma diede origine ad uno tsunami che provocò ingenti danni alla centrale nucleare di Fukushima. Per molto tempo Miyazaki e il suo staff furono assaliti dal dubbio: includere o meno la sequenza del terremoto del Kanto? Non era per niente facile infatti parlare degli effetti devastanti delle scosse sismiche dopo i circa 15.000 morti prodotti da questa ennesima catastrofe, tuttavia si prese la decisione di includere ugualmente quella parte.</p>
