--- a/include/articles/soundtrack.html
+++ b/include/articles/soundtrack.html
@@ -4,16 +4,15 @@
 				<section>
 					<article>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/ost.jpg" target="_blank"><img src="../media/img/ost_min.jpg" alt=""></a>
 						</div>
 						<p>La colonna sonora originale del film è stata composta dallo storico compositore dello Studio, Joe Hisaishi, e interamente eseguita dalla Yomiuri Nippon Symphony Orchestra. Invece il tema finale <i>"Hikōki-gumo"</i> è stato scritto e interpretato da Yumi Matsutoya nel 1973.</p>
 						<p>In Giappone la soundtrack è stata pubblicata su CD nel luglio del 2013, mentre nel resto del mondo è disponibile solo in versione digitale.</p>
+
+
 						<div class="media">
-							<video controls preload="metadata">
-								<source src="../media/video/trailer.mp4" type="video/mp4">
-								<source src="../media/video/trailer.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
-							</video>
+							<iframe width="450" height="253" src="https://www.youtube.com/embed/iwJDz707wgk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
+							</iframe>
 							<p class="didascalia">Performance dal vivo del tema principale, "Tabiji"</p>
 						</div>
 						<p class="centered"><a href="https://itunes.apple.com/it/album/wind-rises-original-soundtrack/id785256904" target="_blank">Acquista la colonna sonora su iTunes Store</a></p>
