Added banner images

--- a/include/articles/considerazioni.html
+++ b/include/articles/considerazioni.html
@@ -1,4 +1,4 @@
-<header class="clearfix" id="bg-considerazioni">
+<header class="clearfix" id="bg-considerazioni01">
 					<h1>CONSIDERAZIONI PERSONALI</h1>
 				</header>
 				<section>
@@ -6,7 +6,7 @@
 						<h2>Considerazioni personali</h2>
 						<p>In quest'ultimo capitolo vorrei riportare alcuni spunti di riflessione che gli anglofoni tradurrebbero con lo splendido termine <i>"food for thought"</i>, ovvero "cibo per la mente".</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/considerazioni00.png" target="_blank"><img src="../media/img/considerazioni00.jpg" alt=""></a>
 						</div>
 						<p>Proprio come farebbe il grande regista nipponico dunque, vi invito a sedervi a tavola con me e approfondire alcuni concetti.</p>
 						<div class="colonne clearfix">
