--- a/include/articles/critica.html
+++ b/include/articles/critica.html
@@ -1,15 +1,16 @@
-<header class="clearfix" id="bg-critica">
+<header class="clearfix" id="bg-critica01">
 					<h1>LA CRITICA</h1>
 				</header>
 				<section>
 					<article>
 						<h2>La critica</h2>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica00a.png" target="_blank"><img src="../media/img/critica00a.jpg" alt=""></a>
 						</div>
 						<p>Nell'analisi sul tema storico, nel primo capitolo, abbiamo accennato al fatto che quest'ultima pellicola di Miyazaki abbia sollevato un notevole polverone politico, sia in patria che un po' in tutto il globo. Al regista nipponico infatti viene contestato il fatto che egli dipinga Horikoshi come un genio che possedeva un talento non indifferente, e addirittura viene accusato di glorificare gli stessi Zero.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/zero_model.jpg" target="_blank"><img src="../media/img/zero_model_min.jpg" alt=""></a>
+							<p class="didascalia">Miyazaki con un modellino di Zero</p>
 						</div>
 						<p>Tuttavia, avendo già spolpato l'argomento delle contraddizioni personali del maestro, che alludevano alla persona di Jiro e alle sue creazioni, è giunto il momento di passare proprio alla critica forse più delicata di tutte quelle che gli sono state rivolte: quella a sfondo storico-politico.</p>
 						<div class="colonne clearfix">
