--- a/include/articles/prefazione.html
+++ b/include/articles/prefazione.html
@@ -1,4 +1,4 @@
-<header class="clearfix" id="bg-prefazione">
+<header class="clearfix" id="bg-intro">
 					<h1>PREFAZIONE</h1>
 				</header>
 				<section>
