--- a/include/articles/tema_politico_1.html
+++ b/include/articles/tema_politico_1.html
@@ -1,4 +1,4 @@
-<header class="clearfix" id="bg-politico1">
+<header class="clearfix" id="bg-politico">
 					<h1>IL TEMA POLITICO-SOCIALE</h1>
 				</header>
 				<section>
