--- a/include/articles/tema_storico.html
+++ b/include/articles/tema_storico.html
@@ -1,4 +1,4 @@
-<header class="clearfix" id="bg-storico">
+<header class="clearfix" id="bg-storico01">
 					<h1>IL TEMA STORICO</h1>
 				</header>
 				<section>
@@ -6,11 +6,11 @@
 						<h2>Il tema storico: "Dio sta nei dettagli"</h2>
 						<p>Uno dei miei detti popolari preferiti è proprio quello che conferisce il titolo a questa prima sezione sui temi sviluppati all'interno della pellicola dal regista nipponico.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/storico00a.png" target="_blank"><img src="../media/img/storico00a.jpg" alt=""></a>
 						</div>
 						<p>In poche parole significa che quando ci si interroga sulla vera natura di una qualsivoglia opera o situazione bisogna cercare di guardare anche nella più piccola delle serrature, in modo da comprendere al meglio la complessità di ciò che sta davanti ai nostri occhi, mettendoci nella condizione di apprezzarne appieno il valore intrinseco. La riproduzione accurata e verosimile di ogni singolo elemento presente su schermo infatti è un requisito piuttosto basilare per raggiungere uno degli aspetti più importanti della macchina cinematografica, ma che il regista sviluppa in un modo tutto suo: l'immersione dello spettatore.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/storico00b.png" target="_blank"><img src="../media/img/storico00b.jpg" alt=""></a>
 						</div>
 						<p>Oltre allo straordinario potere suggestivo delle immagini proposte (elemento comune a tutte le produzioni targate Ghibli), <i>Si Alza il Vento</i> riesce a calare il fruitore all'interno del contesto narrativo attraverso alcune "lezioni di storia" che nella pellicola vengono inserite poco alla volta, perfettamente in linea con il ritmo della narrazione e senza mai risultare forzate, proprio come se l'intenzione fosse quella di far ambientare lo spettatore in una nuova realtà. Un po' come accade quando ci trasferiamo in una nuova città e ci vuole del tempo per ambientarci in una realtà diversa da quella che conoscevamo, con abitudini ma soprattutto ritmi differenti, Miyazaki ci dà il tempo di metabolizzare tutte le informazioni storiche fornite.</p>
 						<div class="colonne clearfix">
