--- a/include/articles/credits.html
+++ b/include/articles/credits.html
@@ -24,7 +24,29 @@
 						<h2>Crediti</h2>
 						<p>Contenuti testuali e analisi a cura di <a href="http://adinuzzo.hint.club" target="_blank">Andrea Di Nuzzo</a> e Hintclub S.r.l.s..</p>
 						<p>Design, realizzazione tecnica e grafica a cura di <a href="http://mzino.hint.club" target="_blank">Matteo Zino</a> e Hintclub S.r.l.s..</p>
-						<p>Artwork a cura di (creditare qui)</p>
+						<p>Si ringraziano i seguenti utenti <a href="http://www.deviantart.com/" target="_blank"><i>DeviantArt</i></a> per gli Artwork dei banner:</p>
+						<ul>
+							<li><a href="http://stephengarrett1019.deviantart.com/art/The-Wind-Rises-435821502" target="_blank">stephengarrett1019</a></li>
+							<li><a href="http://shaylex.deviantart.com/art/Lift-Your-Spirit-436226688" target="_blank">Shaylex</a></li>
+							<li><a href="http://nikaworks.deviantart.com/art/Paper-Plane-436568687" target="_blank">nikaworks</a></li>
+							<li><a href="http://the-brave-kitten.deviantart.com/art/The-Wind-Rises-436779307" target="_blank">The-Brave-Kitten</a></li>
+							<li><a href="http://yagaminoue.deviantart.com/art/Takeoff-436526487" target="_blank">yagaminoue</a></li>
+							<li><a href="http://hideyoshi.deviantart.com/art/The-Wind-Rises-436893993" target="_blank">Hideyoshi</a></li>
+							<li><a href="http://1risheart.deviantart.com/art/Eternal-Love-436784627" target="_blank">1risHeart</a></li>
+							<li><a href="http://mmmaoh.deviantart.com/art/The-Wind-Rises-436987589" target="_blank">mmmaoh</a></li>
+							<li><a href="http://leslibertines.deviantart.com/art/The-Wind-Rises-436982879" target="_blank">LesLibertines</a></li>
+							<li><a href="http://coconutmilkyway.deviantart.com/art/take-to-the-sky-436982527" target="_blank">CoconutMilkyway</a></li>
+							<li><a href="http://w-e-z.deviantart.com/art/The-Wind-Rises-436991456" target="_blank">W-E-Z</a></li>
+							<li><a href="http://vincentsdeviantart.deviantart.com/art/The-Wind-Rises-Commentary-Included-436986194" target="_blank">vincentsdeviantart</a></li>
+							<li><a href="http://tsukizu.deviantart.com/art/Kaze-Tachinu-436979206" target="_blank">tsukizu</a></li>
+							<li><a href="http://cow41087.deviantart.com/art/The-Wind-Rises-Tribute-436561018" target="_blank">cow41087</a></li>
+							<li><a href="http://jnikel.deviantart.com/art/The-Wind-Rises-Foreshadow-435968916" target="_blank">JNIKEL</a></li>
+							<li><a href="http://sakura-joker.deviantart.com/art/The-Wind-Rises-436354535" target="_blank">SAkURA-JOkER</a></li>
+							<li><a href="http://nerdvana21.deviantart.com/art/Innovation-by-design-436511988" target="_blank">Nerdvana21</a></li>
+							<li><a href="http://gaoshua.deviantart.com/art/Tribute-to-The-Wind-Rises-436945850" target="_blank">gaoshua</a></li>
+							<li><a href="http://square1999.deviantart.com/art/The-Wind-Rises-BY-YHC-436990009" target="_blank">square1999</a></li>
+							<li><a href="http://clmac.deviantart.com/art/Skies-Connect-436822876" target="_blank">CLMac</a></li>
+						</ul>
 						<div class="person"></div>
 						<h2>Note legali</h2>
 						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dell'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
