--- a/m/css/style.css
+++ b/m/css/style.css
@@ -38,8 +38,8 @@ html {
 }
 nav {
 	color: #fff;
-	font-size: 20px;
-	font-size: 1.25rem;
+	font-size: 18px;
+	font-size: 1.125rem;
 	font-weight: 700;
 	line-height: 48px;
 	line-height: 3rem;
@@ -95,8 +95,7 @@ article {
 	line-height: 1.5rem;
 	margin: 60px auto 20px auto;
 	margin: 3.75rem auto 1.25rem auto;
-	width: 500px;
-	width: 31.25rem;
+	width: 90%;
 }
 .person {
 	color: #222;
@@ -123,24 +122,24 @@ article {
 	line-height: 1.5rem;
 	padding: 0 18px;
 	padding: 0 1.125rem;
-	width: 50%;
+	margin-bottom: 30px;
+	margin-bottom: 1.875rem;
+	width: 90%;
 	box-sizing: border-box;
 }
-.lyrics_l,
 .previous {
 	float: left;
 }
-.lyrics_r,
 .next {
 	float: right;
 }
 .previous,
 .next {
-	font-size: 20px;
-	font-size: 1.25rem;
+	font-size: 18px;
+	font-size: 1.125rem;
 	line-height: 26px;
 	line-height: 1.5rem;
-	padding: 20px 30px;
+	padding: 20px 0;
 	width: 40%;
 	box-sizing: border-box;
 	text-align: center;
@@ -365,8 +364,8 @@ nav ul {
 	list-style-type: none;
 }
 ul {
-	padding: 0 0 0 25px;
-	padding: 0 0 0 1.563rem;
+	padding: 0 0 0 10px;
+	padding: 0 0 0 0.625rem;
 	margin: 0;
 }
 header,
@@ -381,6 +380,7 @@ section,
 }
 .main-footer {
 	text-align: center;
+	font-size: 0.875rem;
 }
 .media,
 .media img,
@@ -391,8 +391,10 @@ section,
 header {
 	min-height: 200px;
 	min-height: 12.5rem;
-	line-height: 200px;
-	line-height: 12.5rem;
+	line-height: 2.875rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .laterale img {
 	padding: 0 20px;
@@ -408,6 +410,7 @@ header {
 section {
 	margin: 60px 0 30px 0;
 	margin: 3.75rem 0 1.875rem 0;
+	min-height: 800px;
 }
 .colonne {
 	width: 100%;
@@ -561,8 +564,10 @@ SMALL SCREEN OPT
 	header {
 		min-height: 75px;
 		min-height: 4.688rem;
-		line-height: 75px;
-		line-height: 4.688rem;
+		line-height: 2.5rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		padding: 0;
 	}
 	.media {
@@ -583,6 +588,7 @@ table {
 	margin: 0 auto;
 	font-size: 14px;
 	font-size: 0.875rem;
+	text-align: left;
 }
 th,
 td {
@@ -594,15 +600,8 @@ td {
 HOMEPAGE SPECIFIC FIXES
 =============== */
 body#menu-home .grid {
-	background: url("../../assets/bg/home_cover.jpg") no-repeat; /* fallback */
-	background: -webkit-gradient(linear, left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background:  -webkit-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background:     -moz-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background:      -ms-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background:       -o-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background:          linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
-	background-size: 800px auto;
-	background-color: #fff;
+	background: #fff url("../../assets/bg/home_cover.jpg") no-repeat;
+	background-size: cover;
 }
 body#menu-home h1,
 body#menu-home h2 {
@@ -623,9 +622,13 @@ body#menu-home h4 {
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, .7), -1px -1px 1px rgba(0, 0, 0, .7);
 	margin: 20px auto;	
 }
-body#menu-home section {
-	min-height: 800px;
+body#menu-home header {
+	display: none;
 }
 body#menu-home .button-top {
 	display: none;
+}
+body#menu-critica2 iframe,
+body#menu-soundtrack iframe {
+	width: 95%;
 }
