--- a/include/articles/credits.html
+++ b/include/articles/credits.html
@@ -47,7 +47,7 @@
 						</ul>
 						<div class="person"></div>
 						<h2>Note legali</h2>
-						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dell'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
+						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dall'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
 						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
 						&copy; 2013 Nibariki – GNDHDDTK<br>
 						&copy; Studio Ghibli</p>
