--- a/include/articles/tema_amoroso.html
+++ b/include/articles/tema_amoroso.html
@@ -8,7 +8,7 @@
 						<div class="media">
 							<a href="../media/img/amore_00a.png" target="_blank"><img src="../media/img/amore_00a.jpg" alt=""></a>
 						</div>
-						<p>A mio modo di vedere il tema amoroso non è mai così semplice da raccontare, ed è ancora più difficle da sviluppare senza cadere ovviamente nel banale o nella storia d'amore "perfetta" e irrealizzabile, che risulta spesso alienante per il fruitore, il quale perde interesse nel narrato; il maestro invece riesce ancora una volta a costruire un rapporto che segue un ritmo preciso e uno stile raffinato che non ha quel classico sapore di "già visto". Quella di Jiro e Nahoko è una relazione molto più realistica e immersiva di tante altre storie d'amore viste sul grande e piccolo schermo.</p>
+						<p>A mio modo di vedere il tema amoroso non è mai così semplice da raccontare, ed è ancora più difficle da sviluppare senza cadere ovviamente nel banale o nella storia d'amore "perfetta" e irrealizzabile, che risulta spesso alienante per il fruitore, il quale perde interesse nel narrato; il maestro invece riesce ancora una volta a costruire un rapporto che segue un ritmo preciso e uno stile raffinato che non ha quel classico sapore di "già visto". Quella di Jiro e Nahoko è una relazione molto più realistica e immersiva di tante altre storie d'amore viste sul grande e piccolo schermo anche perché fatta di piccoli gesti.</p>
 						<div class="media">
 							<a href="../media/img/amore_00b.png" target="_blank"><img src="../media/img/amore_00b.jpg" alt=""></a>
 						</div>
