Very minor correction

--- a/include/articles/considerazioni_3.html
+++ b/include/articles/considerazioni_3.html
@@ -5,7 +5,7 @@
 					<article>
 						<h2>L'arte che fa conoscere sé stessi: perfezionarsi come esseri umani</h2>
 						<p>Una volta ho letto in un libro di poesie Zen una frase che fa una certa chiarezza in merito alle aspettative dei grandi maestri nei confronti dei propri discepoli:</p>
-						<div class="quote">"Gli insegnanti di Haiku e i maestri Zen non si apettano miracoli dai propri discepoli, ma sostengono che praticando seriamente un'arte, se se ne ha l'ispirazione, l'uomo può perfezionarsi."</div>
+						<div class="quote">"Gli insegnanti di Haiku e i maestri Zen non si aspettano miracoli dai propri discepoli, ma sostengono che praticando seriamente un'arte, se se ne ha l'ispirazione, l'uomo può perfezionarsi."</div>
 						<div class="person"></div>
 						<p>Forme d'arte come il cinema, dunque, servono anche a toglierci dalle spalle il peso delle pressioni che viviamo ogni giorno, che ci fanno correre ad una velocità talmente elevata da non consentirci di percepire più nemmeno il significato che può avere il silenzio di una scena statica.</p>
 						<h4>Perchè c'è un momento di silenzio? Cosa mi vuole comunicare il regista?</h4>
