--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -34,8 +34,7 @@
 						<div class="media">
 							<video controls preload="metadata">
 								<source src="../media/video/sigaretta.mp4" type="video/mp4">
-								<source src="../media/video/sigaretta.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/sigaretta.mp4">qui</a>.
+								Il file video non funziona? Scaricalo <a href="../media/video/sigaretta.mp4">qui</a>.
 							</video>
 						</div>
 						<p>Il finale è invece un grandissimo pugno nello stomaco, sfido chiunque a non versare nemmeno una lacrima. La giovane decide di tornare di nascosto al sanatorio montano, poiché ha compreso che il tempo a sua disposizione è terminato. La coltellata emotiva questa volta ce la infligge la signora Kurokawa, che dice:</p>
