--- a/include/articles/tema_storico_1.html
+++ b/include/articles/tema_storico_1.html
@@ -29,8 +29,7 @@
 						<div class="media">
 							<video controls preload="metadata">
 								<source src="../media/video/terremoto.mp4" type="video/mp4">
-								<source src="../media/video/terremoto.webm" type="video/webm">
-								Il file video non funziona? Scaricalo <a href="../media/audio/terremoto.mp4">qui</a>.
+								Il file video non funziona? Scaricalo <a href="../media/video/terremoto.mp4">qui</a>.
 							</video>
 						</div>
 						<p class="curiosita"><b>Una triste curiosità:</b> L'intera sequenza del terremoto era già stata completata quando l'11 marzo 2011 un devastante sisma diede origine ad uno tsunami che provocò ingenti danni alla centrale nucleare di Fukushima. Per molto tempo Miyazaki e il suo staff furono assaliti dal dubbio: includere o meno la sequenza del terremoto del Kanto? Non era per niente facile infatti parlare degli effetti devastanti delle scosse sismiche dopo i circa 15.000 morti prodotti da questa ennesima catastrofe, tuttavia si prese la decisione di includere ugualmente quella parte.</p>
